Fixing the session time, removing a scrollbar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,6 @@
-body {
+html, body {
   background: #50514F;
+  overflow:hidden;
 }
 
 .center {
